--- a/styles/App.css
+++ b/styles/App.css
@@ -1,60 +1,60 @@
 /* * {
-  border: 1px solid red
+  border: 1px solid red;
 } */
 
 .content {
-    height: calc(100vh-10vh);
-  }
-  
-  .smaller-text {
-    font-size: .9em;
-  }
-  
-  .top-section {
-    width: 75vw;  
-    margin: 0 auto;  
-  }
-  
-  .sm-gray {
-    font-size: .9em;
-    color: gray;
-  }
-  
-  .chart-container {
-    margin-top: 20px;
-  }
-  
-  .polar-container {
-    position: relative;
-    margin: auto;
-    /* width: 80%; */
-  }
-  
-  .lower-section-bg {
-    background-color: rgba(0,0,0,.1);
-    margin-top: 35px;
-  }
-  
-  .lower-section {
-    width: 75vw;
-    margin: 0 auto;
-    padding: 25px 35px;
-  }
-  
-  div.ui.centered.doubling.five.column.grid {
-    padding: 0;
-  }
-  
-  hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    margin: 1em 0;
-    padding: 0;
-    width: 70px;
-  }
+  height: calc(100vh-10vh);
+}
 
-  /* User Page */
+.smaller-text {
+  font-size: 0.9em;
+}
+
+.top-section {
+  width: 75vw;
+  margin: 0 auto;
+}
+
+.sm-gray {
+  font-size: 0.9em;
+  color: gray;
+}
+
+.chart-container {
+  margin-top: 20px;
+}
+
+.polar-container {
+  position: relative;
+  margin: auto;
+  /* width: 80%; */
+}
+
+.lower-section-bg {
+  background-color: rgba(0, 0, 0, 0.1);
+  margin-top: 35px;
+}
+
+.lower-section {
+  width: 75vw;
+  margin: 0 auto;
+  padding: 25px 35px;
+}
+
+div.ui.centered.doubling.five.column.grid {
+  padding: 0;
+}
+
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  margin: 1em 0;
+  padding: 0;
+  width: 70px;
+}
+
+/* User Page */
 .list-body {
   padding: 5px 0 0 7px;
 }
@@ -64,21 +64,34 @@
   height: calc(60vh);
   overflow: scroll;
 }
-  
-  
-  /* default styling*/
-  
-  body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-      sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-  
-  code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-      monospace;
-  }
-  
+
+/* Home page */
+
+#carousel {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+}
+
+#carousel #carousel-text {
+  position: absolute;
+  top: 30vh;
+  text-align: center;
+  color: black;
+  font-weight: 600;
+  z-index: 1;
+}
+
+/* default styling*/
+
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
