--- a/styles/App.css
+++ b/styles/App.css
@@ -68,17 +68,14 @@ hr {
 /* Home page */
 
 #carousel {
-  height: 100vh;
   display: flex;
   justify-content: center;
+  margin: 0;
 }
 
 #carousel #carousel-text {
   position: absolute;
-  top: 30vh;
   text-align: center;
-  color: black;
-  font-weight: 600;
   z-index: 1;
 }
 
