--- a/styles/App.css
+++ b/styles/App.css
@@ -10,6 +10,16 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+a {
+  text-decoration: none;
+  color: #505050;
+}
+
+a:hover {
+  color: black;
+  transition: all 0.5s ease;
+}
+
 .content {
   height: calc(100vh-10vh);
 }
